--- a/06 - SoundCore/soundcore/templates/base.html
+++ b/06 - SoundCore/soundcore/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,14 +9,11 @@
     <!-- Icon Import Before Everything -->
     <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@5.5.1/dist/ionicons/ionicons.esm.js"></script>
     <!-- AnimeJS import for resizing Everything :) -->
-    <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"
-            integrity="sha256-XL2inqUJaslATFnHdJOi9GfQ60on8Wx1C2H8DYiN1xY=" crossorigin="anonymous"></script>
+    <script src="{% static 'core/js/vendor/anime/anime.min.js' %}"></script>
     <!-- We need Bulma For Everything. So a global import is good -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"
-          integrity="sha256-O8SsQwDg1R10WnKJNyYgd9J3rlom+YSVcGbEF5RmfFk=" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'core/css/vendor/bulma/bulma.css' %}">
     <!-- Lodash for state management and superpower -->
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"
-            integrity="sha256-qXBd/EfAdjOA2FGrGAG+b3YBn2tn5A6bhz+LSgYD96k=" crossorigin="anonymous"></script>
+    <script src="{% static 'core/js/vendor/lodash/lodash.js' %}"></script>
     {% block head %}{% endblock %}
     <title>
         {% block title %}{% endblock %}
