--- a/06 - SoundCore/soundcore/user/templates/accounts/forget/index.html
+++ b/06 - SoundCore/soundcore/user/templates/accounts/forget/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 <!-- Title of the HTML -->
 {% block title %}
     SoundCore | Forget Password
@@ -10,72 +11,7 @@
 {% endblock %}
 <!-- We import CSS from CDN here. -->
 {% block head %}
-    <style>
-        html {
-            overflow-x: hidden;
-            overflow-y: hidden;
-            background-color: black
-        }
-
-        html body .login-hero {
-            background-color: #060606;
-        }
-
-        html body .login-hero .hero-body .container .columns .column .icon-box {
-            background-color: transparent;
-        }
-
-        html body .login-hero .hero-body .container .columns .column .login-box {
-            background-color: #191b1f;
-        }
-
-        html body .login-hero .hero-body .container .columns .column .login-box .items {
-            padding: .4em;
-        }
-
-
-        html body .login-hero .hero-body .container .columns .column .login-box .field .field-body .field .control .input {
-            background-color: #2f323a;
-            border: none;
-            color: white;
-        }
-
-        html body .login-hero .hero-body .container .columns .column .login-box .field .field-body .field .control .input::placeholder {
-            color: white;
-            opacity: .3;
-            font-family: "Nunito";
-
-        }
-
-        html body .login-hero .hero-body .container .columns .column .login-box .button {
-            background-color: #2f323a;
-            border: none;
-            color: white;
-            transition: 0.4s;
-            font-family: "Nunito";
-        }
-
-        html body .login-hero .hero-body .container .columns .column .login-box .button:hover {
-            background-color: #24262d;
-            color: gray;
-            font-family: "Nunito";
-        }
-
-        html body .login-hero .hero-body .container .columns .column .login-box .level .level-right .level-item .new_here_tag {
-            font-family: 'Roboto';
-            color: gray;
-        }
-
-        html body .login-hero .hero-body .container .columns .column .login-box .level .level-item .href_tag {
-            text-decoration: none;
-            font-family: "Roboto";
-        }
-
-        html body .login-hero .hero-body .container .columns .column .login-box .level .level-item .href_tag:hover {
-            color: #3273dc
-        }
-    </style>
-{% endblock %}
+    <link rel="stylesheet" href="{% static 'accounts-forget/css/main.css' %}"/>{% endblock %}
 <!-- We Write HTML here-->
 {% block body %}
     <section class="hero login-hero is-fullheight">
@@ -99,10 +35,11 @@
                                             <p class="control is-expanded has-icons-left">
                                                 {{ form.username }}
                                                 <span class="icon is-small is-left">
-                                                    <ion-icon class="account__icon" name="person-circle-outline"></ion-icon>
+                                                    <ion-icon class="account__icon"
+                                                              name="person-circle-outline"></ion-icon>
                                                     <script>
                                                         anime({
-                                                            targets:'.account__icon',
+                                                            targets: '.account__icon',
                                                             color: '#FFFFFF',
                                                             scale: 1.5,
                                                         })
