--- a/06 - SoundCore/soundcore/user/templates/accounts/login/unsuccessful/index.html
+++ b/06 - SoundCore/soundcore/user/templates/accounts/login/unsuccessful/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 <!-- Title of the HTML -->
 {% block title %}
     SoundCore | Success
@@ -11,39 +11,7 @@
 {% endblock %}
 <!-- We import CSS from CDN here. -->
 {% block head %}
-    <style>
-        html {
-            overflow-x: hidden;
-            overflow-y: hidden;
-            background-color: black;
-        }
-
-        .icon-box {
-            background-color: transparent;
-        }
-
-        .login-hero {
-            background-color: #060606;
-        }
-
-        .login-box {
-            background-color: #191b1f;
-        }
-
-        .subtitle {
-            color: #92a3ab;
-            font-family: 'Nunito'
-        }
-
-        .href_tag {
-            text-decoration: none;
-            font-family: 'Roboto';
-        }
-
-        .href_tag:hover {
-            color: #3273dc
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'accounts-login-unsuccessful/css/main.css' %}"/>
 {% endblock %}
 
 <!-- We Write HTML here-->
