--- a/06 - SoundCore/soundcore/user/templates/accounts/register/success/index.html
+++ b/06 - SoundCore/soundcore/user/templates/accounts/register/success/index.html
@@ -11,39 +11,7 @@
 {% endblock %}
 <!-- We import CSS from CDN here. -->
 {% block head %}
-    <style>
-        html {
-            overflow-x: hidden;
-            overflow-y: hidden;
-            background-color: black;
-        }
-
-        .icon-box {
-            background-color: transparent;
-        }
-
-        .login-hero {
-            background-color: #060606;
-        }
-
-        .login-box {
-            background-color: #191b1f;
-        }
-
-        .subtitle {
-            color: #92a3ab;
-            font-family: 'Nunito'
-        }
-
-        .href_tag {
-            text-decoration: none;
-            font-family: 'Roboto';
-        }
-
-        .href_tag:hover {
-            color: #3273dc
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'accounts-register-success/css/main.css' %}" />
 {% endblock %}
 
 <!-- We Write HTML here-->
