--- a/06 - SoundCore/soundcore/user/templates/accounts/reset/index.html
+++ b/06 - SoundCore/soundcore/user/templates/accounts/reset/index.html
@@ -11,7 +11,7 @@
 {% endblock %}
 <!-- We import CSS from CDN here. -->
 {% block head %}
-    <link rel="stylesheet" href="{% static 'accounts-reset/css/main.css' %}"/>
+    <link rel="stylesheet" href="{% static 'accounts_reset/css/main.css' %}"/>
 {% endblock %}
 <!-- We Write HTML here-->
 {% block body %}
