--- a/06 - SoundCore/soundcore/soundcore/static/soundcore/css/main.css
+++ b/06 - SoundCore/soundcore/soundcore/static/soundcore/css/main.css
@@ -69,7 +69,7 @@ body {
 }
 
 /*
-For some reason I dont want round items.
+For some reason I dont want round soundcore_library_items.
 .song-image {
     border-radius: 5px;
 }
