--- a/06 - SoundCore/soundcore/templates/left-sidebar.html
+++ b/06 - SoundCore/soundcore/templates/left-sidebar.html
@@ -91,7 +91,7 @@
         </a>
 
         <a href="{% url 'library_home' %}">
-            {% if active == 'soundcore-library' %}
+            {% if active == 'soundcore_library' %}
                 <div class="box icon_box is_icon_active">
             {% else %}
                 <div class="box icon_box">
