--- a/06 - SoundCore/soundcore/user/templates/accounts/register/successful/index.html
+++ b/06 - SoundCore/soundcore/user/templates/accounts/register/successful/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 <!-- Title of the HTML -->
 {% block title %}
     SoundCore | Success
@@ -11,7 +11,7 @@
 {% endblock %}
 <!-- We import CSS from CDN here. -->
 {% block head %}
-    <link rel="stylesheet" href="{% static 'accounts-register-success/css/main.css' %}" />
+    <link rel="stylesheet" href="{% static 'accounts_register_successful/css/main.css' %}" />
 {% endblock %}
 
 <!-- We Write HTML here-->
